# tl-python

./: .gitignore  LICENSE  README.md  build.sh  config.toml  pyproject.toml
Translation-Library-Docs/i18n/: README.md  de.toml  ja.toml
i18n/: en.toml
resources/constants/: values.py
tests/utils/: test_config_utils.py  test_language_utils.py  test_paths_utils.py  test_toml_utils.py  test_translation_utils.py
tl/: __init__.py  __main__.py
tl/cli/: README.md  __init__.py  old_cli.py  tl_cli.py
tl/utils/: README.md  __init__.py  config_utils.py  language_utils.py  toml_utils.py  translation_utils.py
translation_library/: __main__.py
translation_library/cli/: new_cli.py  tl_cli.py
translation_library/utils/: config_utils.py  language_utils.py  path_utils.py  toml_utils.py  translation_utils.py
