[project]
name = "tl-python"
version = "1.0.0"
description = "TOML based translation library written in Python"
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [{ name = "payne1778" }]

dependencies = ["pytest", "tomlkit", "glom", "pydantic", "typer"]

[project.scripts]
tl-python = "tl.__main__:main"

[project.urls]
resources-repo = "https://github.com/payne1778/Translation-Library-Docs"
monorepo = "https://github.com/payne1778/Translation-Library"
repo = "https://github.com/payne1778/tl-python"

[tool.pyright]
reportCallInDefaultInitializer = "none"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"

[tool.pytest.ini_options]
log_cli = true
